shameless self-promotion

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -14,6 +14,8 @@
       </a>
 
       <div class="trigger">
+        <span style="color:#888888">Check out my other thing, <a href="https://signwithenvoy.com">Envoy</a>!</span>
+
         {% for page in site.pages %}
           {% if page.title %}
           <a class="page-link" href="{{ page.url | prepend: site.baseurl }}">{{ page.title }}</a>
