--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,6 +2,27 @@
 
   <div class="wrapper">
 
+    <!-- Begin MailChimp Signup Form -->
+    <link href="//cdn-images.mailchimp.com/embedcode/slim-081711.css" rel="stylesheet" type="text/css">
+    <style type="text/css">
+    	#mc_embed_signup{background:#fff; font:14px Helvetica,Arial,sans-serif; }
+    	/* Add your own MailChimp form style overrides in your site stylesheet or in this style block.
+    	   We recommend moving this block and the preceding CSS link to the HEAD of your HTML file. */
+    </style>
+    <div id="mc_embed_signup" style='padding-bottom:15px'>
+    <form action="//us11.list-manage.com/subscribe/post?u=61792fb637a86d176aca85ce5&amp;id=5e6796a476" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+        <div id="mc_embed_signup_scroll">
+    	<label for="mce-EMAIL">Receive an email when I publish something new!</label>
+    	<input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="email address" required />
+        <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+      <div style="position: absolute; left: -5000px;"><input type="text" name="b_61792fb637a86d176aca85ce5_5e6796a476" tabindex="-1" value="" /></div>
+      <div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
+      </div>
+    </form>
+    </div>
+
+    <!--End mc_embed_signup-->
+
     <h2 class="footer-heading">{{ site.title }}</h2>
 
     <div class="footer-col-wrapper">
