added my lg username as the twitter person for tweet button

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -8,6 +8,8 @@ layout: default
     <p class="post-meta">{{ page.date | date: "%b %-d, %Y" }}{% if page.author %} • {{ page.author }}{% endif %}{% if page.meta %} • {{ page.meta }}{% endif %}&nbsp;</p>
     <a class="twitter-share-button"
       href="https://twitter.com/intent/tweet">
+      <link rel="me"
+  href="https://twitter.com/lg">
     Tweet</a>
 
     <script>window.twttr = (function(d, s, id) {
