--- a/_includes/header.html
+++ b/_includes/header.html
@@ -14,7 +14,7 @@
       </a>
 
       <div class="trigger">
-        <span style="color:#888888">Check out my other thing, <a href="https://signwithenvoy.com">Envoy</a>!</span>
+        <span style="color:#888888">Check out my other thing, <a href="https://envoy.com">Envoy</a>!</span>
 
         {% for page in site.pages %}
           {% if page.title %}
